--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,22 @@
         "type_traits": "cpp",
         "tuple": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
-    }
+        "utility": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "string": "cpp"
+    },
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "server": "192.168.2.235",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "192.168.2.235",
+            "group": "dev",
+            "database": "netsight",
+            "username": "netsight",
+            "password": "netsight"
+        }
+    ]
 }
