--- a/Server/openbmpd.conf
+++ b/Server/openbmpd.conf
@@ -88,6 +88,9 @@ debug:
 
 pulsar:
   
+  # don't produce msg  to pulsar actually when this flag set true 
+  dummy.producer.enabled: false
+  
   # message.max.bytes - Maximum transmit message size
   message.max.bytes: 1000000
 
@@ -124,7 +127,7 @@ pulsar:
   #    For IPv6 use "[host or ip]:port".  Make sure to use double quotes for IPv6
   #    Can specify the protocol using <proto>://<host>[:port]
   brokers:
-    - localhost:9092
+    - localhost:6650
 
 
   # Topics are the topic names used by the collector when producing messages.
